assets/css/app.scss
@use "./tailwind" as *;
@use "scss/index";

@use 'cropper/dist/cropper.css' as cropper;
//@use "flag-icons/sass/flag-icons.scss";
@use "select2/dist/css/select2.css" as select2;
@use "bootstrap-daterangepicker/daterangepicker.css" as daterangepicker;
//@use 'jquery-ui/themes/base/all.css';
@use "tinymce/skins/ui/oxide/skin.css" as tinymce-skin;

@use './editor_content';

@use "@fancyapps/fancybox/dist/jquery.fancybox.css" as fancybox;
@use "timepicker/jquery.timepicker.min.css" as timepicker;
@use "qtip2/dist/jquery.qtip.min.css" as qtip;


@layer utilities {
  .border-gray-300 {
    --tw-border-opacity: 1;
    border-color: rgba(156, 163, 175, var(--tw-border-opacity));
  }
  .border-gray-100 {
    --tw-border-opacity: 1;
    border-color: rgba(247, 250, 252, var(--tw-border-opacity));
  }
}

@layer components {
  .card {
    @apply rounded-lg bg-white shadow-sm w-full;
  }

  // Buttons with icons.
  .btn > .svg {
    @apply -ml-1 mr-1 h-4 w-5 fill-current ;
  }

  // Forms.

  .help-block {
    @apply mt-2 text-caption;
  }

  .has-error .ch-form-label {
    @apply h-8;
  }

  .has-error .help-block {
    @apply italic text-caption;
  }

  .has-error .ch-form-control {
  }

  // List

  .list-group {
    @apply flex flex-col mr-4;
  }

  .list-group-item {
    @apply flex flex-row justify-start gap-2 border rounded-sm px-3 py-3 items-center;
  }

  #lp_item_list .list-group-item {
    align-items: normal !important;
  }

  .data_table, .table-striped  {
    @apply border-collapse w-full mt-2;

    thead th {
      @apply bg-gray-20 text-gray-90 font-semibold text-left p-2 border-b border-gray-30 border-t border-l border-r;
    }

    tbody td {
      @apply p-2 border-b border-gray-30 border-l border-r;
    }

    tbody tr:nth-child(odd) {
      @apply bg-gray-5;
    }

    tbody tr:hover {
      background-color: #eff6ff;
    }

    .checkbox label {
      @apply pl-4;
    }

    i.mdi {
      @apply align-middle;
    }

    .mdi::before {
      @apply inline-block;
      font-size: inherit;
      -webkit-font-smoothing: antialiased;
      text-rendering: optimizeLegibility;
      transform: translate(0, 0);
    }
  }

  .sortable-container {
    width: 100%;
    overflow: auto;
  }

  .sortable-buttons-actions {
    @apply bg-white border-l border-b border-r border-support-1 rounded-b shadow-xl;
  }


  .alert {
    @apply p-3.5 mb-5 border border-transparent rounded;
  }

  .alert-warning {
    background-color: #fff3cd;
    color: #856404;
    border-color: #ffeeba;
  }

  .alert-danger {
    background-color: #f8d7da;
    color: #721c24;
    border-color: #f5c6cb;
  }

  .alert-info {
    background-color: #d1ecf1;
    color: #0c5460;
    border-color: #bee5eb;
  }

  .alert-success {
    background-color: #d4edda;
    color: #155724;
    border-color: #c3e6cb;
  }


  // Tabs

  .tab_wrapper nav {
    @apply card flex flex-row justify-between gap-2.5;
  }

  .tab_wrapper nav a {
    @apply px-4 py-2 rounded-lg text-primary transition-colors;
  }

  // Calendar

  #calendar .fc-toolbar-chunk {
    @apply flex flex-row;
  }

  // Page header

  .page-header {
    @apply text-h3 flex flex-row gap-2;
  }

  #no-data-view {
    @apply flex flex-col items-center justify-center p-4 space-y-4 antialiased;
  }

  .pull-right {
    @apply flex justify-end;
  }

  .header-border-bottom {
    border-bottom: 1px solid #e4e9ed !important;
  }

  .ch-tool-icon {
    @apply font-extrabold text-primary;
  }
  .ch-toolbar-icon {
    @apply font-extrabold text-primary leading-none;
  }
  .ch-tool-icon-success {
    @apply font-extrabold text-success;
  }
  .ch-tool-icon-disabled {
    @apply font-extrabold text-gray-50;
  }
  .ch-tool-icon-gradient {
    @apply font-extrabold text-transparent bg-clip-text bg-gradient-to-br from-primary to-primary-gradient;
  }
  .ch-tool-icon-button {
    @apply font-extrabold bg-clip-text;
  }

  #course-search-keyword {
    @apply w-auto;
  }

  // Form
  .form-actions {
    @apply flex justify-end gap-2 mt-2;
  }

  .has-error input, .has-error select {
    border-color: red !important;
  }

  // Special

  // Progress bars
  .progress {
    @apply rounded-sm ring-1 text-center min-h-full ml-12 mr-4;
  }

  .log-container {
    height: 300px;
    overflow-y: scroll;
    background-color: #000;
    padding: 10px;
  }

  .terminal {
    color: #00ff00; /* Green */
    font-family: monospace;
  }

  .terms-container {
    overflow-y: scroll;
    height: 180px;
    border: 1px solid #ccc;
    padding: 10px;
    margin-bottom: 20px;
  }

  // Pager
  .pager-bar {
  }
  .pager-bar .pager-select {
  }
  .pager-bar .pager-counter {
    @apply mt-4;
  }
  .pager-bar .pager-jumper {
    @apply mt-4;
  }
  .pager-bar .pager-jumper .btn-link {
    @apply -mt-2 mx-2;
  }

  // free-jqGrid override
  .ui-jqgrid-bootstrap.modal {
    @apply bg-white;
  }
}

.studentview-button {
  .p-button-label {
    @apply hidden
      sm:block;
  }
}

.mdi {
  @apply font-normal text-base leading-none;

  &::before {
    vertical-align: bottom;
  }
}

.field > small.p-error {
  @apply text-error;
}

// tabs
.tab-content {
  > .tab-pane {
    display: none;
  }
  > .active {
    @apply block;
  }
}

.col-md-offset-0 {
  margin-left: 0 !important;
}

.col-md-offset-1 {
  margin-left: 5% !important;
}

.col-md-offset-2 {
  margin-left: 10% !important;
}

.col-md-offset-3 {
  margin-left: 15% !important;
}

.col-md-offset-4 {
  margin-left: 20% !important;
}

.custom-message {
  padding: 15px;
}

.custom-message {
  ol,
  ul,
  menu {
    list-style: initial;
  }
}

.custom-link {
  color: blue;
  text-decoration: underline;
}

#date_fields label,
.p-float-label .datepicker-label {
  top: 0px;
  left: 0.5rem;
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  --tw-text-opacity: 1;
  color: rgb(46 117 163 / var(--tw-text-opacity));
  font-size: 12px;
}
/* ... */

